<resources>
    <string name="app_name">reFresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="delete_button">Apagar</string>
    <string name="details_button">Detalhes</string>
    <string name="favorite_button">Favoritar</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="focus">Focus</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="entrar">ENTRAR</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="n_o_tem_conta_registre_se">Não tem conta? Registre-se</string>
    <string name="logo_do_refresh">Logo do reFresh</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="registar">REGISTAR</string>
    <string name="j_tem_conta_fa_a_login">Já tem conta? Faça login</string>
</resources>