<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="pt.utad.refresh.ui.ingredientes.IngredientesFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_ingredientes" >
        <action
            android:id="@+id/action_navigation_ingredientes_to_navigation_receitas"
            app:destination="@id/nav_receitas"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_transform"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_scanner"
        android:name="pt.utad.refresh.ui.scanner.ScannerFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="pt.utad.refresh.ui.perfil.PerfilFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="pt.utad.refresh.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_receitas"
        android:name="pt.utad.refresh.ui.receitas.ReceitasFragment"
        android:label="Receitas"
        tools:layout="@layout/fragment_receitas" />
</navigation>